# cisv-cli

./: Makefile  README.md
.github/workflows/: benchmark.yml  ci.yml  release.yml
cli/: CMakeLists.txt  Makefile
cli/benchmarks/: Dockerfile  README.md  run_benchmark.sh
cli/src/: main.c
docs/man/: cisv.1
examples/: basic.sh  detailed.sh
packaging/: nfpm.yaml
packaging/scripts/: postinstall.sh
